[package]
name = "grrs"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "A tool to search files"
readme = "README.md"
homepage = "https://github.com/Ozy-Viking/grrs"
repository = "https://github.com/Ozy-Viking/grrs"
keywords = ["cli", "search", "demo"]
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
indicatif = "0.17.8"
clap-verbosity-flag = "2.2.1"
ctrlc = {version = "3.4.4", features = ["termination"]}
confy = "0.6.1"
serde_derive = "1.0.204"

[dev-dependencies]
assert_cmd = "2.0.14"
predicates = "3.1.0"
assert_fs = "1.1.1"

